src/main/java/query/parser/QueryParser.java
// Generated from QueryParser.g4 by ANTLR 4.9.2

    package query.parser;
    import java.math.BigDecimal;
    import query.backtracking.*;
    import query.search.*;
    import executor.*;
    import java.util.*;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class QueryParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.9.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SEMICOLON=1, COMMA=2, ASTERISK=3, LEFTBRACKET=4, RIGHTBRACKET=5, LEFTBRACE=6, 
		RIGHTBRACE=7, LEFTSQUARE=8, RIGHTSQUARE=9, AND=10, OR=11, NOT=12, IN=13, 
		FROM=14, WITH=15, BACK=16, FORWARD=17, TRACK=18, SEARCH=19, AS=20, DISPLAY=21, 
		EXPORT=22, RETURN=23, SELECT=24, CONNECTDB=25, DB=26, WHERE=27, INCLUDE=28, 
		EXCLUDE=29, NODES=30, EDGES=31, LIMIT=32, TIME=33, STEP=34, MS=35, SECOND=36, 
		MINUTE=37, TYPE=38, NAME=39, PATH=40, DSTIP=41, DSTPORT=42, SRCIP=43, 
		SRCPORT=44, PID=45, EXENAME=46, EXEPATH=47, CMDLINE=48, OPTYPE=49, IDSTR=50, 
		SRCID=51, DSTID=52, STARTTIME=53, ENDTIME=54, AMOUNT=55, PROCESS=56, FILE=57, 
		NETWORK=58, READ=59, WRITE=60, EXECVE=61, NULL=62, ARROW=63, EQ=64, NEQ=65, 
		GT=66, GEQ=67, LT=68, LEQ=69, LIKE=70, UNION=71, INTERSECTION=72, DIFFERENCE=73, 
		LOGAND=74, LOGOR=75, INT=76, STRING=77, ID=78, NEWLINE=79, WS=80, COMMENT=81, 
		LINE_COMMENT=82;
	public static final int
		RULE_start = 0, RULE_connectStmt = 1, RULE_assignStmt = 2, RULE_searchExpr = 3, 
		RULE_searchStmt = 4, RULE_displayStmt = 5, RULE_exportStmt = 6, RULE_nodeMatchTerm = 7, 
		RULE_relatTerm = 8, RULE_returnTerm = 9, RULE_nodeAttributes = 10, RULE_logicOpt = 11, 
		RULE_relatConst = 12, RULE_relatExpr = 13, RULE_dataSource = 14, RULE_graphExpr = 15, 
		RULE_trackExpr = 16, RULE_direction = 17, RULE_startTerm = 18, RULE_filterTerm = 19, 
		RULE_typeFilterTerm = 20, RULE_limitTerm = 21, RULE_constraintExpr = 22, 
		RULE_expr = 23, RULE_binaryExpr = 24, RULE_strId = 25, RULE_numId = 26, 
		RULE_entityType = 27, RULE_optType = 28, RULE_eqOp = 29, RULE_numOp = 30;
	private static String[] makeRuleNames() {
		return new String[] {
			"start", "connectStmt", "assignStmt", "searchExpr", "searchStmt", "displayStmt", 
			"exportStmt", "nodeMatchTerm", "relatTerm", "returnTerm", "nodeAttributes", 
			"logicOpt", "relatConst", "relatExpr", "dataSource", "graphExpr", "trackExpr", 
			"direction", "startTerm", "filterTerm", "typeFilterTerm", "limitTerm", 
			"constraintExpr", "expr", "binaryExpr", "strId", "numId", "entityType", 
			"optType", "eqOp", "numOp"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "';'", "','", "'*'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
			"'and'", "'or'", "'not'", "'in'", "'from'", "'with'", "'back'", "'forward'", 
			"'track'", "'search'", "'as'", "'display'", "'export'", "'return'", "'select'", 
			"'connectdb'", "'db'", "'where'", "'include'", "'exclude'", "'nodes'", 
			"'edges'", "'limit'", "'time'", "'step'", "'ms'", "'s'", "'m'", "'type'", 
			"'name'", "'path'", "'dstip'", "'dstport'", "'srcip'", "'srcport'", "'pid'", 
			"'exename'", "'exepath'", "'cmdline'", "'optype'", "'id'", "'srcid'", 
			"'dstid'", "'starttime'", "'endtime'", "'amount'", "'process'", "'file'", 
			"'network'", "'read'", "'write'", "'execve'", "'null'", "'->'", "'='", 
			"'!='", "'>'", "'>='", "'<'", "'<='", "'like'", "'|'", "'&'", "'-'", 
			"'&&'", "'||'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SEMICOLON", "COMMA", "ASTERISK", "LEFTBRACKET", "RIGHTBRACKET", 
			"LEFTBRACE", "RIGHTBRACE", "LEFTSQUARE", "RIGHTSQUARE", "AND", "OR", 
			"NOT", "IN", "FROM", "WITH", "BACK", "FORWARD", "TRACK", "SEARCH", "AS", 
			"DISPLAY", "EXPORT", "RETURN", "SELECT", "CONNECTDB", "DB", "WHERE", 
			"INCLUDE", "EXCLUDE", "NODES", "EDGES", "LIMIT", "TIME", "STEP", "MS", 
			"SECOND", "MINUTE", "TYPE", "NAME", "PATH", "DSTIP", "DSTPORT", "SRCIP", 
			"SRCPORT", "PID", "EXENAME", "EXEPATH", "CMDLINE", "OPTYPE", "IDSTR", 
			"SRCID", "DSTID", "STARTTIME", "ENDTIME", "AMOUNT", "PROCESS", "FILE", 
			"NETWORK", "READ", "WRITE", "EXECVE", "NULL", "ARROW", "EQ", "NEQ", "GT", 
			"GEQ", "LT", "LEQ", "LIKE", "UNION", "INTERSECTION", "DIFFERENCE", "LOGAND", 
			"LOGOR", "INT", "STRING", "ID", "NEWLINE", "WS", "COMMENT", "LINE_COMMENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "QueryParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    private ExecutionContext exeCtx;

	    public QueryParser(TokenStream input, ExecutionContext extCtx) {
	        this(input);
	        this.exeCtx = extCtx;
	    }

	    private ConstraintExpression combine(ConstraintExpression i, ConstraintExpression e) {
	        if (i == null && e == null) return null;
	        else if (i == null) return new NotExpression(e);
	        else if (e == null) return i;
	        else return new AndExpression(i, new NotExpression(e));
	    }

	public QueryParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class StartContext extends ParserRuleContext {
		public LinkedList<QueryStatement> stmts = new LinkedList<>();
		public List<ConnectStmtContext> connectStmt() {
			return getRuleContexts(ConnectStmtContext.class);
		}
		public ConnectStmtContext connectStmt(int i) {
			return getRuleContext(ConnectStmtContext.class,i);
		}
		public List<AssignStmtContext> assignStmt() {
			return getRuleContexts(AssignStmtContext.class);
		}
		public AssignStmtContext assignStmt(int i) {
			return getRuleContext(AssignStmtContext.class,i);
		}
		public List<SearchStmtContext> searchStmt() {
			return getRuleContexts(SearchStmtContext.class);
		}
		public SearchStmtContext searchStmt(int i) {
			return getRuleContext(SearchStmtContext.class,i);
		}
		public List<DisplayStmtContext> displayStmt() {
			return getRuleContexts(DisplayStmtContext.class);
		}
		public DisplayStmtContext displayStmt(int i) {
			return getRuleContext(DisplayStmtContext.class,i);
		}
		public List<ExportStmtContext> exportStmt() {
			return getRuleContexts(ExportStmtContext.class);
		}
		public ExportStmtContext exportStmt(int i) {
			return getRuleContext(ExportStmtContext.class,i);
		}
		public StartContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_start; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterStart(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitStart(this);
		}
	}

	public final StartContext start() throws RecognitionException {
		StartContext _localctx = new StartContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_start);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(69);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 19)) & ~0x3f) == 0 && ((1L << (_la - 19)) & ((1L << (SEARCH - 19)) | (1L << (DISPLAY - 19)) | (1L << (EXPORT - 19)) | (1L << (CONNECTDB - 19)) | (1L << (ID - 19)))) != 0)) {
				{
				setState(67);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case CONNECTDB:
					{
					setState(62);
					connectStmt();
					}
					break;
				case ID:
					{
					setState(63);
					assignStmt();
					}
					break;
				case SEARCH:
					{
					setState(64);
					searchStmt();
					}
					break;
				case DISPLAY:
					{
					setState(65);
					displayStmt();
					}
					break;
				case EXPORT:
					{
					setState(66);
					exportStmt();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(71);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ConnectStmtContext extends ParserRuleContext {
		public Token STRING;
		public TerminalNode CONNECTDB() { return getToken(QueryParser.CONNECTDB, 0); }
		public TerminalNode STRING() { return getToken(QueryParser.STRING, 0); }
		public TerminalNode SEMICOLON() { return getToken(QueryParser.SEMICOLON, 0); }
		public ConnectStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_connectStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterConnectStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitConnectStmt(this);
		}
	}

	public final ConnectStmtContext connectStmt() throws RecognitionException {
		ConnectStmtContext _localctx = new ConnectStmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_connectStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(72);
			match(CONNECTDB);
			setState(73);
			((ConnectStmtContext)_localctx).STRING = match(STRING);
			setState(74);
			match(SEMICOLON);

			    String str = (((ConnectStmtContext)_localctx).STRING!=null?((ConnectStmtContext)_localctx).STRING.getText():null);
			    ((StartContext)getInvokingContext(0)).stmts.add(new ConnectDbStatement(exeCtx, str.substring(1, str.length() - 1)));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AssignStmtContext extends ParserRuleContext {
		public Token ID;
		public GraphExprContext graphExpr;
		public SearchExprContext searchExpr;
		public TerminalNode ID() { return getToken(QueryParser.ID, 0); }
		public TerminalNode EQ() { return getToken(QueryParser.EQ, 0); }
		public GraphExprContext graphExpr() {
			return getRuleContext(GraphExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(QueryParser.SEMICOLON, 0); }
		public SearchExprContext searchExpr() {
			return getRuleContext(SearchExprContext.class,0);
		}
		public AssignStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterAssignStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitAssignStmt(this);
		}
	}

	public final AssignStmtContext assignStmt() throws RecognitionException {
		AssignStmtContext _localctx = new AssignStmtContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_assignStmt);
		try {
			setState(89);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(77);
				((AssignStmtContext)_localctx).ID = match(ID);
				setState(78);
				match(EQ);
				setState(79);
				((AssignStmtContext)_localctx).graphExpr = graphExpr(0);
				setState(80);
				match(SEMICOLON);

				    ((StartContext)getInvokingContext(0)).stmts.add(new AssignStatement(exeCtx, (((AssignStmtContext)_localctx).ID!=null?((AssignStmtContext)_localctx).ID.getText():null), ((AssignStmtContext)_localctx).graphExpr.gq));
				    
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(83);
				((AssignStmtContext)_localctx).ID = match(ID);
				setState(84);
				match(EQ);
				setState(85);
				((AssignStmtContext)_localctx).searchExpr = searchExpr();
				setState(86);
				match(SEMICOLON);

				        ((StartContext)getInvokingContext(0)).stmts.add(new SearchStatement(exeCtx, (((AssignStmtContext)_localctx).ID!=null?((AssignStmtContext)_localctx).ID.getText():null), ((AssignStmtContext)_localctx).searchExpr.sc));
				    
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SearchExprContext extends ParserRuleContext {
		public SearchConstraints sc;
		public DataSourceContext dataSource;
		public NodeMatchTermContext nodeMatchTerm;
		public RelatTermContext relatTerm;
		public TerminalNode SEARCH() { return getToken(QueryParser.SEARCH, 0); }
		public TerminalNode FROM() { return getToken(QueryParser.FROM, 0); }
		public DataSourceContext dataSource() {
			return getRuleContext(DataSourceContext.class,0);
		}
		public NodeMatchTermContext nodeMatchTerm() {
			return getRuleContext(NodeMatchTermContext.class,0);
		}
		public RelatTermContext relatTerm() {
			return getRuleContext(RelatTermContext.class,0);
		}
		public SearchExprContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_searchExpr; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterSearchExpr(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitSearchExpr(this);
		}
	}

	public final SearchExprContext searchExpr() throws RecognitionException {
		SearchExprContext _localctx = new SearchExprContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_searchExpr);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(91);
			match(SEARCH);
			setState(92);
			match(FROM);
			setState(93);
			((SearchExprContext)_localctx).dataSource = dataSource();
			setState(94);
			((SearchExprContext)_localctx).nodeMatchTerm = nodeMatchTerm();
			setState(95);
			((SearchExprContext)_localctx).relatTerm = relatTerm();

			        ((SearchExprContext)_localctx).sc =  new SearchConstraints(((SearchExprContext)_localctx).dataSource.source);
			        _localctx.sc.setNodeConstraints(((SearchExprContext)_localctx).nodeMatchTerm.cm);
			        _localctx.sc.setEdges(((SearchExprContext)_localctx).relatTerm.relations);
			        _localctx.sc.setEdgeConstraints(((SearchExprContext)_localctx).relatTerm.opts);
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SearchStmtContext extends ParserRuleContext {
		public SearchConstraints sc;
		public DataSourceContext dataSource;
		public NodeMatchTermContext nodeMatchTerm;
		public RelatTermContext relatTerm;
		public ReturnTermContext returnTerm;
		public TerminalNode SEARCH() { return getToken(QueryParser.SEARCH, 0); }
		public TerminalNode FROM() { return getToken(QueryParser.FROM, 0); }
		public DataSourceContext dataSource() {
			return getRuleContext(DataSourceContext.class,0);
		}
		public NodeMatchTermContext nodeMatchTerm() {
			return getRuleContext(NodeMatchTermContext.class,0);
		}
		public RelatTermContext relatTerm() {
			return getRuleContext(RelatTermContext.class,0);
		}
		public ReturnTermContext returnTerm() {
			return getRuleContext(ReturnTermContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(QueryParser.SEMICOLON, 0); }
		public SearchStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_searchStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterSearchStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitSearchStmt(this);
		}
	}

	public final SearchStmtContext searchStmt() throws RecognitionException {
		SearchStmtContext _localctx = new SearchStmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_searchStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(SEARCH);
			setState(99);
			match(FROM);
			setState(100);
			((SearchStmtContext)_localctx).dataSource = dataSource();
			setState(101);
			((SearchStmtContext)_localctx).nodeMatchTerm = nodeMatchTerm();
			setState(102);
			((SearchStmtContext)_localctx).relatTerm = relatTerm();
			setState(103);
			((SearchStmtContext)_localctx).returnTerm = returnTerm();
			setState(104);
			match(SEMICOLON);

			        ((SearchStmtContext)_localctx).sc =  new SearchConstraints(((SearchStmtContext)_localctx).dataSource.source);
			        _localctx.sc.setNodeConstraints(((SearchStmtContext)_localctx).nodeMatchTerm.cm);
			        _localctx.sc.setEdges(((SearchStmtContext)_localctx).relatTerm.relations);
			        _localctx.sc.setEdgeConstraints(((SearchStmtContext)_localctx).relatTerm.opts);
			        _localctx.sc.setReturnName(((SearchStmtContext)_localctx).returnTerm.name, ((SearchStmtContext)_localctx).returnTerm.isDisplay);
			        ((StartContext)getInvokingContext(0)).stmts.add(new SearchStatement(exeCtx, _localctx.sc));
			    
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DisplayStmtContext extends ParserRuleContext {
		public GraphExprContext graphExpr;
		public TerminalNode DISPLAY() { return getToken(QueryParser.DISPLAY, 0); }
		public GraphExprContext graphExpr() {
			return getRuleContext(GraphExprContext.class,0);
		}
		public TerminalNode SEMICOLON() { return getToken(QueryParser.SEMICOLON, 0); }
		public DisplayStmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_displayStmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).enterDisplayStmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof QueryParserListener ) ((QueryParserListener)listener).exitDisplayStmt(this);
		}
	}

	public final DisplayStmtContext displayStmt() throws RecognitionException {
		DisplayStmtContext _localctx = new DisplayStmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_displayStmt);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(107);
			match(DISPLAY);
			setState(108);
			((DisplayStmtContext)_localctx).graphExpr = graphExpr(0);
			setState(109);
			match(SEMICOLON);

			    ((StartContext)getInvokingContext(0)).stmts.add(new DisplayStatement(exeCtx, ((DisplayStmtContext)_localctx).graphExpr.gq));

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
